<resources>
    <string name="app_name">Gifin</string>
    <string name="hint_type_to_search">点此输入</string>
    <string name="button_search">搜索</string>
    <string name="button_text">文本</string>
    <string name="button_favorite">收藏</string>
    <string name="button_delete">退格</string>
    <string name="button_operation">操作</string>
    <string name="button_close">关闭</string>
    <string name="button_send">回车</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="accessibility_description">\u3000\u3000开启辅助功能便于自动切换回输入法。\n\n\u3000\u3000由于 Gifin 输入法重在斗图，不支持输入文字，在搜索时需要切换回你熟悉的输入法以输入文字，点击搜索回到微信，又需要切换回 Gifin 输入法以选择表情，开启辅助功能，这两步切换将自动执行，无需您动手点击。\n\u3000\u3000本功能只会监视选择输入法弹窗和返回微信步骤，除此之外没有任何额外功能，不会泄露您的任何隐私。</string>
    <string name="tip_search">点击输入框搜索表情</string>

    <string name="button_disabled">未激活</string>
    <string name="button_enabled">已激活</string>
    <string name="button_opened">已开启</string>
    <string name="button_closed">已关闭</string>
    <string name="button_ignored">已忽略</string>
    <string name="button_ignore">忽略</string>
    <string name="setting_init_title">只需3步即可开始斗图</string>
    <string name="step_1">1.激活 Gifin 输入法</string>
    <string name="step_1_tip">系统可同时激活多个输入法</string>
    <string name="step_2">2.选择 Gifin 为默认输入法(可选)</string>
    <string name="step_2_tip">在输入过程中可随时切换默认输入法</string>
    <string name="step_3">3.开启辅助功能(可选)</string>
    <string name="step_3_tip">减少手动操作数，更快更便捷</string>
    <string name="settings_0">自动跳转辅助功能页</string>
    <string name="settings_0_tip">搜索时未开启辅助功能强制跳转到辅助功能页</string>
    <string name="settings_1">总是展开搜索历史</string>
    <string name="settings_1_tip">切换为 Gifin 时，自动展开搜索历史</string>
    <string name="settings_2">记住上次搜索</string>
    <string name="settings_2_tip">切换为 Gifin 时，显示上次搜索结果</string>
    <string name="settings_3">搜索结果数量</string>
    <string name="settings_3_tip">越少越省流量，越多内容越丰富</string>
    <string name="settings_4">自动收藏</string>
    <string name="settings_4_tip">发送过的表情自动添加到收藏</string>
    <string name="settings_5">备份数据</string>
    <string name="settings_5_tip">备份到 SD 卡</string>
    <string name="settings_6">恢复数据</string>
    <string name="settings_6_tip">从 SD 卡恢复</string>
    <string name="settings_6_tip_2">从 SD 卡恢复 (发现备份数据文件)</string>
    <string name="settings_7">忽略电池优化</string>
    <string name="settings_7_tip">避免误杀进程导致服务关闭</string>
    <string name="first_tip_title">可在输入时随时从通知栏切换回 Gifin 输入法</string>
    <string name="button_ok">我知道了</string>
    <string name="arrow_down">↓</string>
</resources>