<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLine"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/settings_init_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_init_title"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_init_step_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_1"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_init_step_1"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_1_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_init_button_1"
                    style="@style/SearchButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_disabled" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_init_step_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_2"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_init_step_2"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_2_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_init_button_2"
                    style="@style/SearchButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_disabled" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_init_step_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_3"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_init_step_3"
                    android:layout_marginTop="5dp"
                    android:text="@string/step_3_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_init_button_3"
                    style="@style/SearchButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_disabled" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_0"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_0"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_0_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_0"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_closed" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_1"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_1"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_1_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_1"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_closed" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_2"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_2"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_2_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_2"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_closed" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_4"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_4"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_4_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_4"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_closed" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_3"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_3"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_3_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_3"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:text="30条" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_5"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_5"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_5_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_5"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="备份"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_6"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/setting_6_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_6"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_6_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_6"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="恢复"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_search_bg"
                android:padding="20dp">

                <TextView
                    android:id="@+id/setting_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_7"
                    android:textColor="@color/colorTextDark"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/setting_7_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setting_7"
                    android:layout_marginTop="5dp"
                    android:text="@string/settings_7_tip"
                    android:textColor="@color/colorTextLight"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/setting_button_7"
                    style="@style/SearchButtonStyle"
                    android:layout_width="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_ignore" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>