<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tip_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/first_tip_title"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_down"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/first_tip_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_down"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/first_tip_2"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/button_ok"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />
</LinearLayout>